# test-eff

./: stack.yaml  test-eff.cabal
msg/: invalid-1.json  valid-1.json
src/: ConsoleExample.hs  FreeExample.hs  FunctorExample.hs  HasqlExample.hs  LiftExample.hs  Main.hs  RandomExample.hs  ReaderConstruction.hs  ReaderExample.hs  ReaderImplExample.hs  ReaderWriterImplExample.hs
