name:             test-eff
version:          0.1.0.0
synopsis:         Simple project template from stack
description:      Please see README.md
homepage:         http://github.com/githubuser/test-eff#readme
license:          MIT
license-file:     LICENSE
author:           Author name here
maintainer:       example@example.com
copyright:        2010 Author Here
category:         Web
build-type:       Simple
cabal-version:    >=1.10

executable test-eff
   main-is:             Main.hs
   hs-source-dirs:      src
   default-language:    Haskell2010

   ghc-options:         -rtsopts

   build-depends:       base                 ==4.*

                     ,  aeson
                     ,  aeson-casing
                     ,  bytestring
                     ,  extensible-effects
                     ,  hasql
                     ,  neat-interpolation

executable reader-example
   main-is:             ReaderExample.hs
   hs-source-dirs:      src
   default-language:    Haskell2010

   ghc-options:         -Wall -rtsopts

   build-depends:       base                 ==4.*
      
                     ,  extensible-effects

executable lift-example
   main-is:             LiftExample.hs
   hs-source-dirs:      src
   default-language:    Haskell2010

   ghc-options:         -Wall -rtsopts

   build-depends:       base                 ==4.*
      
                     ,  extensible-effects
                     ,  random

executable hasql-example
   main-is:             HasqlExample.hs
   hs-source-dirs:      src
   default-language:    Haskell2010

   ghc-options:         -Wall -rtsopts

   build-depends:       base                 ==4.*
      
                     ,  extensible-effects
                     ,  contravariant
                     ,  text
                     ,  hasql 
                     ,  hasql-pool
                     ,  hasql-th

executable random-example
   main-is:             RandomExample.hs
   hs-source-dirs:      src
   default-language:    Haskell2010

   ghc-options:         -Wall -rtsopts

   build-depends:       base                 ==4.*
      
                     ,  extensible-effects
                     ,  random
                     ,  random-eff

executable functor-example
   main-is:             FunctorExample.hs
   hs-source-dirs:      src
   default-language:    Haskell2010

   ghc-options:         -Wall -rtsopts -ddump-deriv

   build-depends:       base                 ==4.*
      
                     ,  extensible-effects
                     ,  free

executable reader-impl-example
   main-is:             ReaderImplExample.hs
   hs-source-dirs:      src
   default-language:    Haskell2010

   ghc-options:         -Wall -rtsopts

   build-depends:       base                 ==4.*
      
                     ,  extensible-effects

executable reader-writer-impl-example
   main-is:             ReaderWriterImplExample.hs
   hs-source-dirs:      src
   default-language:    Haskell2010

   ghc-options:         -Wall -rtsopts

   build-depends:       base                 ==4.*
      
                     ,  extensible-effects

